--- a/src/components/intro/Intro.css
+++ b/src/components/intro/Intro.css
@@ -1,7 +1,7 @@
 .intro-card {
   border: 3px solid black;
-  margin: 20px 20px;
-  width: 30%;
-  padding: 20px;
+  margin: 20px auto;
+  width: 90%;
+  padding: 15px 20px;
   box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
 }
